# tuigreet

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs  build_version.rs  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: publish-release.sh  release-notes.sh  validate-aur-release.sh  validate-release.sh
.github/workflows/: aur-git.yml  aur.yml  ci.yml  release.yml
contrib/: text.conf  tuigreet.toml
contrib/man/: tuigreet-1.scd
packaging/aur/greetd-tuigreety/: PKGBUILD
packaging/aur/greetd-tuigreety-bin/: PKGBUILD
packaging/aur/greetd-tuigreety-git/: PKGBUILD
src/: battery.rs  cache.rs  config.rs  event.rs  greeter.rs  info.rs  ipc.rs  ipc_codec.rs  keyboard.rs  logger.rs  macros.rs  main.rs  power.rs  terminal.rs  text.rs  watcher.rs
src/integration/: auth.rs  exit.rs  menus.rs  movement.rs  remember.rs
src/integration/common/: backend.rs  mod.rs  output.rs
src/ui/: command.rs  i18n.rs  mod.rs  processing.rs  prompt.rs  sessions.rs  util.rs
src/ui/common/: menu.rs  style.rs
tests/: build_version.rs  process.rs
