[package]
name    = "tuigreet"
version = "0.9.1"
authors = [ "Antoine POPINEAU <antoine@popineau.eu>" ]
edition = "2024"
build   = "build.rs"

[features]
default    = [  ]
nsswrapper = [  ]

[dependencies]
ansi-to-tui = "8.0.1"
chrono = { version = "0.4.45", default-features = false, features = [ "clock", "std", "unstable-locales" ] }
crossterm = { version = "0.29.0", default-features = false, features = [ "event-stream" ] }
futures-util = { version = "0.3.32", default-features = false, features = [ "async-await", "std" ] }
getopts = "0.2.24"
greetd_ipc = { version = "0.10.3", features = [ "tokio-codec" ] }
i18n-embed = { version = "0.14.1", features = [ "desktop-requester", "fluent-system" ] }
i18n-embed-fl = "0.8.0"
nix = { version = "0.31.3", features = [ "feature" ] }
rand = { version = "0.10.2", default-features = false, features = [ "std", "std_rng" ] }
ratatui = { version = "0.30.2", default-features = false, features = [
  "crossterm_0_29",
  "layout-cache",
  "unstable-rendered-line-info",
] }
rust-embed = "8.12.0"
rust-ini = "0.21.3"
smart-default = "0.7.1"
tokio = { version = "1.52.3", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
unic-langid = "0.9.6"
utmp-rs = "0.4.0"
uzers = { version = "0.12.2", default-features = false }
zeroize = "1.9.0"

[profile.release]
lto = true

[dev-dependencies]
greetd-stub   = "0.3.0"
tempfile      = "3.27.0"
unicode-width = "0.2.2"
